# hsc_wl

./: .gitignore  AGENTS.md  README.md  initial.py  pyproject.toml
libs/jianbing/: .gitignore
libs/jianbing/jianbing/: __init__.py  scatter.py  visual.py  wlensing.py
libs/merian/: run_hsc.ini  run_merian.py
output/: healsparse_mask_nside4096.fits
sandbox/: comoving_volume.py  compare_scatter_labels.py  convert_topn_pkl_to_fits.py  fit_custom_scatter.py  generate_healpix.py  inspect_data.py  load_old_data.py  playground.py  prepare_random.py  prepare_random_r16.py  run_merian.py  shape_diff.py  visual_result.py
script/: hsc_wl.py  hsc_wl.yaml  random.sql  visual_result.py
script/archive/: hsc_wl.ini
scripts/: compare_scatter.py  compute_scatter.py  hsc_wl.py  hsc_wl.yaml  load_s16a_hdf5.py  prepare_lens_and_random.py  prepare_random.py  visual_multi.py  visual_result.py  visual_single.py
src/: visual.py
