[project]
name = "hsc-wl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"dsigma>=1.1.0",
	"pandas>=2.3.3",
	"healpy>=1.18.1",
	"healsparse>=1.11.1",
	"selasviz>=0.1.12",
	"jianbing",
]

[dependency-groups]
dev = ["ipykernel>=7.2.0", "matplotlib>=3.10.8"]

# ignore F401, F403 and F405 in ruff
[tool.ruff]
ignore = ["F401", "F403", "F405"]

[tool.uv.sources]
jianbing = { path = "libs/jianbing", editable = true }
